Improved the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Gray Sea Creative</title>
+<title>Gray Sea Creative by Gracey</title>
 	<link href="general.css"rel="stylesheet">
 	<meta name="handhedfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
