added social media

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,85 @@
 <head>
 <meta charset="UTF-8">
 <title>Portfolio</title>
+	<link href="css/portfolio-general.css"rel="stylesheet">
+	<meta name="handhedfriendly" content="true">
+	<meta name="mobileoptimized" content="240">
+	<meta name="viewport" content="width=device-width;initial-scale=1">
+	
+</head>
+
+
+
 </head>
 
 <body>
-	<h1>Portfolio
-	</h1>
+	<div class="container">
+			<header>
+				<h1>Portfolio</h1>
+			</header>
+
+	
+	
+	
+<ol class="portfolio-blocks">
+				<li>
+					<a href="#">
+						<figure>
+							<img src="http://placehold.it/200x200" alt="">
+							<figcaption>Death of Free Thought</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="http://placehold.it/200x200" alt="">
+							<figcaption>IZZE Re-branding</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="http://placehold.it/200x200" alt="">
+							<figcaption>Cycling to a Better Future</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="http://placehold.it/200x200" alt="">
+							<figcaption>Whimsical</figcaption>
+						</figure>
+					</a>
+				</li>
+			</ol>	
+	
+	
+	
+	<!--<footer class="site-footer">
+			<nav id="nav" class="nav nav-bottom">-->
+		<footer>
+				<div class="footer">
+				<ul>
+					<li><a href="https://twitter.com/gracie_morton" target="_blank"><img src="images/social_twitter_white.svg"></a></li>
+					<li><a href="https://www.facebook.com/grace.morton.3363"target="_blank"><img src="images/social_facebook_white.svg"></a></li>
+					<li><a href="http://www.behance.net/gracemorton"target="_blank"><img src="images/social_behance_white.svg"></a></li>
+					<li><a href="http://www.linkedin.com/profile/view?id=219690857&goback=%2Enmp_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1&trk=spm_pic" target="_blank"><img src="images/social_linkedin_white.svg"></a></li>
+					<li><a href="https://vimeo.com/user16334762" target="_blank"><img src="images/social_vimeo_white.svg"></a></li>
+					<li><a href="http://instagram.com/graceymorton target=" target="_blank"><img src="images/social_instagram_white.svg"></a></li>
+				</ul>
+	</footer>
+<!--	
+	<footer>
+		<!--<dl class="copyright">© 2013 Gray Sea Creative</p>--><!--
+		<dd class="twitter"><a href="https://twitter.com/gracie_morton" target="_blank"><img src="images/social_twitter_white.svg"></a></dd>
+		<dd class="facebook"><a href="https://www.facebook.com/grace.morton.3363"target="_blank"><img src="images/social_facebook_white.svg"></a></dd>
+		<dd class="behance"><a href="http://www.behance.net/gracemorton"target="_blank"><img src="images/social_behance_white.svg"></a></dd>
+		<dd class="linked-in"><a href="http://www.linkedin.com/profile/view?id=219690857&goback=%2Enmp_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1&trk=spm_pic"target="_blank"><img src="images/social_linkedin_white.svg"</a></dd>
+		<dd class="vimeo"><a href="https://vimeo.com/user16334762" target="_blank"><img src="images/social_vimeo_white.svg"></a>
+	</footer>
+-->	
 </body>
 </html>
