--- a/intro.html
+++ b/intro.html
@@ -120,7 +120,7 @@
 		
 			<li><a href="#">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="#">Portfolio</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="#">Contact</a></li>
 
 		</ul>
