--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
 
 <div class="container">
 			<header>
-				<h1>Gracey Morton</h1>
+			<h1><img src="images/graceymorton_graceymorton.svg"></h1>	
+				<!--<h1>Gracey Morton</h1>-->
 			</header>
 					
 			
@@ -36,14 +37,27 @@
 			</article>
 		
 	
-		
 <footer>
+				<div class="footer">
+				<ul>
+					<li><a href="https://twitter.com/gracie_morton" target="_blank"><img src="images/social_twitter_white.svg"></a></li>
+					<li><a href="https://www.facebook.com/grace.morton.3363"target="_blank"><img src="images/social_facebook_white.svg"></a></li>
+					<li><a href="http://www.behance.net/gracemorton"target="_blank"><img src="images/social_behance_white.svg"></a></li>
+					<li><a href="http://www.linkedin.com/profile/view?id=219690857&goback=%2Enmp_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1&trk=spm_pic" target="_blank"><img src="images/social_linkedin_white.svg"></a></li>
+					<li><a href="https://vimeo.com/user16334762" target="_blank"><img src="images/social_vimeo_white.svg"></a></li>
+					<li><a href="http://instagram.com/graceymorton target=" target="_blank"><img src="images/social_instagram_white.svg"></a></li>
+				</ul>
+	</footer>	
+	
+	
+	
+
 		<!--<dl class="copyright">© 2013 Gray Sea Creative</p>-->
-		<dd class="twitter"><a href="https://twitter.com/gracie_morton" target="_blank"><img src="images/social-043_twitter.png"></a></dd>
+		<!--<dd class="twitter"><a href="https://twitter.com/gracie_morton" target="_blank"><img src="images/social-043_twitter.png"></a></dd>
 		<dd class="facebook"><a href="https://www.facebook.com/grace.morton.3363"target="_blank"><img src="images/social-046_facebook.png"></a></dd>
 		<dd class="behance"><a href="http://www.behance.net/gracemorton"target="_blank"><img src="images/social-077_behance.png"></a></dd>
 		<dd class="linked-in"><a href="http://www.linkedin.com/profile/view?id=219690857&goback=%2Enmp_*1_*1_*1_*1_*1_*1_*1_*1_*1_*1&trk=spm_pic"target="_blank"><img src="images/social-051_linkedin.png"</a></dd>
-	</footer>
+	</footer>-->
 		
 		
 <!--			
