--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 			<div class="box">
 			<dd><a href="intro.html"><img src="images/grayseacreative.svg";></a></dd>
 </div>
-		<hr>	
+
+<div class="logostack">
+			<div class="box2">
+			<dd><a href="intro.html"><img src="images/grayseacreative-stacked.svg";></a></dd>
+</div>
+		<!--<hr>-->	
 			
 			
 
