--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
 <body>
 	<div class="container">
 			<header>
-				<h1>Portfolio</h1>
+			<h1><img src="images/portfolio_portfolio.svg"></h1>	
+				<!--<h1>Portfolio</h1>-->
 			</header>
 
 	
@@ -27,7 +28,7 @@
 				<li>
 					<a href="#">
 						<figure>
-							<img src="http://placehold.it/200x200" alt="">
+							<img src="images/200x200-magazine.jpg" alt="">
 							<figcaption>Death of Free Thought</figcaption>
 						</figure>
 					</a>
@@ -35,7 +36,7 @@
 				<li>
 					<a href="#">
 						<figure>
-							<img src="http://placehold.it/200x200" alt="">
+							<img src="images/apple-white-recovered.jpg" alt="">
 							<figcaption>IZZE Re-branding</figcaption>
 						</figure>
 					</a>
@@ -43,7 +44,7 @@
 				<li>
 					<a href="#">
 						<figure>
-							<img src="http://placehold.it/200x200" alt="">
+							<img src="images/200px-izze2.jpg" alt="">
 							<figcaption>Cycling to a Better Future</figcaption>
 						</figure>
 					</a>
