organized/rearranged folders

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Gray Sea Creative by Gracey</title>
-	<link href="index-general.css"rel="stylesheet">
+	<link href="css/index-general.css"rel="stylesheet">
 	<meta name="handhedfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width;initial-scale=1">
@@ -21,7 +21,7 @@
 
 <div class="logostack">
 			<div class="box2">
-			<dd><a href="intro.html"><img src="images/grayseacreative-stacked.svg";></a></dd>
+			<dd><a href="intro.html"><img src="images/grayseacreative-stacked_GSC.svg";></a></dd>
 </div>
 		<!--<hr>-->	
 			
