--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Gray Sea Creative — About</title>
-	<link href="about-general.css"rel="stylesheet">
+	<link href="css/about-general.css"rel="stylesheet">
 	<meta name="handhedfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width;initial-scale=1">
@@ -22,7 +22,7 @@
 
 <div class="container">
 			<header>
-			<h1><img src="images/graceymorton_graceymorton.svg"></h1>	
+			<h1><img src="images/wood_1.png"></h1>	
 				<!--<h1>Gracey Morton</h1>-->
 			</header>
 					
