--- a/intro.html
+++ b/intro.html
@@ -8,9 +8,9 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script src="cufon-yui.js" type="text/javascript"></script>
-		<script src="BabelSans_500.font.js" type="text/javascript"></script>
-		<script src="jquery.easing.1.3.js" type="text/javascript"></script>
+		<script src="js/cufon-yui.js" type="text/javascript"></script>
+		<script src="js/BabelSans_500.font.js" type="text/javascript"></script>
+		<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			
 			$(function() {
