--- a/intro.html
+++ b/intro.html
@@ -118,11 +118,11 @@
 	
 		<ul id="slidingMenu" class="slidingMenu">
 		
-			<li><a href="#">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="#">Contact</a></li>
-
+			<li><a href="#"><img src="images/home2_home copy.svg"></a></li>
+			<li><a href="about-grid.html"><img src="images/about2_about copy.svg"></a></li>
+			<li><a href="portfolio-grid.html"><img src="images/portfolio2_portfolio copy.svg"></a></li>
+			<li><a href="#"><img src="images/contact2_about copy.svg"></a></li>
+<!--li><a href="http://drbl.in/fWMM"><img src="images/1.jpg"></a></li>-->
 		</ul>
 		
 
