--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
 <article>
 	
-<div class="logo">
-			<div class="box">
-			<dd><a href="intro.html"><img src="images/grayseacreative.svg";></a></dd>
-</div>
+<div class="title">
+			<div class="gray">
+				<dd><a href="intro.html"><img src="images/grayseacreative3d_gray3d.svg";></a></dd>
+			</div>
+				<div class="sea">
+					<dd><a href="intro.html"><img src="images/grayseacreative3d_sea3d.svg"></a></dd>
+				</div>
+					<div class="creative">
+						<dd><a href="intro.html"><img src="images/grayseacreative3d_creative3d.svg";></a></dd> </div>
 
-<div class="logostack">
-			<div class="box2">
-			<dd><a href="intro.html"><img src="images/grayseacreative-stacked_GSC.svg";></a></dd>
 </div>
 		<!--<hr>-->	
 			
